# Selenium-Bot

./: TODO.md  keep_alive.py  keep_online.py  main.py  pyproject.toml  requirements.txt
commands/: count.py  fun.py  help.py  media.py  message.py  minecraft.py  reactrole.py  rules.py  test.py
data/: count.json  rules.json
data/backups/: 276156728712626178.json
events/: message.py  react.py  ready.py
files/backups/: 276156728712626178.json  662366683884814347.json
utils/: DebugUtil.py  JsonUtil.py  MediaUtil.py  RulesUtil.py  TextUtil.py
