[tool.poetry]
name = "seleniumbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
mcstatus = "^4.0.0"
aiohttp = "^3.6.3"
bs4 = "^0.0.1"
flask = "^1.1.2"
ffmpeg = "^1.4"
youtube-dl = "^2020.11.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
mcipc = "^1.4.0"
pafy = "^0.5.5"
pytube = "^9.7.2"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
